@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.2" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.3" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.tulip" version="2.2.4" />
@@ -19,7 +19,13 @@
 		<platform>all</platform>
 		<language>el</language>
 		<news>
-[B]1.5.X[/B]
+[B]1.5.3[/B]
+- Improved subtitle search for tv shows
+- Improved handling of subtitles choice on multisubs archives
+- Boolean check of archive format with is_zipfile instead of endswith
+- Various other tweaks
+
+[B]1.5.0 - 1.5.2[/B]
 - Fixed subz.xyz (by not loading the xbmcvfs module through kodi_six)
 - Subtitles search can also be performed via listitem query (useful when searching via context menu)
 - Tweaked string formatting on all modules
