@@ -16,9 +16,9 @@
 '''
 
 from xbmcvfs import File as openFile
-from random import choice
-import re, shutil
-from os.path import split
+import re
+from os.path import split as os_split
+from resources.lib.tools import multichoice
 from tulip.compat import urljoin, quote_plus, unquote_plus, quote
 from tulip import cache, cleantitle, client, control
 
@@ -131,115 +131,85 @@ class subzxyz:
 
     def download(self, path, url):
 
-        try:
+        # try:
 
-            result = client.request(url)
+        result = client.request(url)
 
-            # f = os.path.splitext(urlparse.urlparse(url).path)[1][1:]
-            f = control.join(path, url.rpartition('/')[2])
+        f = control.join(path, os_split(url)[1])
 
-            with open(f, 'wb') as subFile:
-                subFile.write(result)
+        with open(f, 'wb') as subFile:
+            subFile.write(result)
+
+        dirs, files = control.listDir(path)
+
+        if len(files) == 0:
+            return
+
+        if not f.lower().endswith('.rar'):
+            control.execute('Extract("{0}","{0}")'.format(f, path))
+
+        if f.lower().endswith('.rar'):
+
+            if control.infoLabel('System.Platform.Windows'):
+                uri = "rar://{0}/".format(quote(f))
+            else:
+                uri = "rar://{0}/".format(quote_plus(f))
+
+            dirs, files = control.listDir(uri)
+
+        else:
 
             dirs, files = control.listDir(path)
 
-            if len(files) == 0:
-                return
+        if dirs and f.lower().endswith('.rar'):
 
-            if not f.lower().endswith('.rar'):
-                control.execute('Extract("{0}","{0}")'.format(f, path))
+            for dir in dirs:
 
-            if f.lower().endswith('.rar'):
+                _dirs, _files = control.listDir(control.join(uri, dir))
 
-                if control.infoLabel('System.Platform.Windows'):
-                    uri = "rar://{0}/".format(quote(f))
-                else:
-                    uri = "rar://{0}/".format(quote_plus(f))
+                [files.append(control.join(dir, i)) for i in _files]
 
-                dirs, files = control.listDir(uri)
+                if _dirs:
 
-            else:
+                    for _dir in _dirs:
+                        _dir = control.join(_dir, dir)
 
-                dirs, files = control.listDir(path)
+                        __dirs, __files = control.listDir(
+                            control.join(uri, _dir)
+                        )
 
-            if dirs:
+                        [files.append(control.join(_dir, i)) for i in __files]
 
-                for dir in dirs:
+        filenames = [i for i in files if i.endswith(('.srt', '.sub'))]
 
-                    _dirs, _files = control.listDir(control.join(uri if f.lower().endswith('.rar') else path, dir))
+        filename = multichoice(filenames)
 
-                    [files.append(control.join(dir, i)) for i in _files]
+        try:
 
-                    if _dirs:
+            filename = filename.decode('utf-8')
 
-                        for _dir in _dirs:
-                            _dir = control.join(_dir, dir)
-
-                            __dirs, __files = control.listDir(
-                                control.join(uri if f.lower().endswith('.rar') else path, _dir)
-                            )
-
-                            [files.append(control.join(_dir, i)) for i in __files]
-
-            filenames = [i for i in files if i.endswith(('.srt', '.sub'))]
-
-            if len(filenames) == 1:
-
-                filename = filenames[0]
-
-            else:
-
-                choices = [split(i)[1] for i in filenames]
-
-                choices.insert(0, control.lang(32215))
-
-                _choice = control.selectDialog(heading=control.lang(32214), list=choices)
-
-                if _choice == 0:
-                    filename = choice(filenames)
-                elif _choice != -1 and _choice <= len(filenames) + 1:
-                    filename = filenames[_choice - 1]
-                else:
-                    filename = choice(filenames)
-
-            try:
-
-                filename = filename.decode('utf-8')
-
-            except Exception:
-
-                pass
-
-            if not control.exists(control.join(path, split(filename)[0])):
-                control.makeFiles(control.join(path, split(filename)[0]))
-
-            subtitle = control.join(path, filename)
-
-            if f.lower().endswith('.rar'):
-
-                content = openFile(uri + filename).read()
-
-                with open(subtitle, 'wb') as subFile:
-                    subFile.write(content)
-
-                output = control.transPath(control.join('special://temp', split(filename)[1]))
-
-                shutil.move(subtitle, output)
-
-                shutil.rmtree(control.join(control.dataPath, 'temp'))
-
-                return output
-
-            else:
-
-                output = control.transPath(control.join('special://temp', filename))
-
-                shutil.move(subtitle, output)
-
-                shutil.rmtree(control.join(control.dataPath, 'temp'))
-
-                return subtitle
-
-        except:
+        except Exception:
 
             pass
+
+        if not control.exists(control.join(path, os_split(filename)[0])) and f.lower().endswith('.rar'):
+            control.makeFiles(control.join(path, os_split(filename)[0]))
+
+        subtitle = control.join(path, filename)
+
+        if f.lower().endswith('.rar'):
+
+            content = openFile(uri + filename).read()
+
+            with open(subtitle, 'wb') as subFile:
+                subFile.write(content)
+
+            return subtitle
+
+        else:
+
+            return subtitle
+
+        # except:
+        #
+        #     pass
